--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "examples/pybullet/utils"]
 	path = examples/pybullet/utils
-	url = https://github.com/caelan/ss-pybullet
+	url = git@github.com:wanderman12345/pybullet_planning.git
 [submodule "downward"]
 	path = downward
 	url = https://github.com/caelan/downward.git
